// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EcAmountInput should render properly 1`] = `
<div
  class="ec-input-field"
  data-test="ec-input-field"
>
  <!--v-if-->
  <input
    class="ec-input-field__input"
    data-test="ec-amount-input ec-input-field__input"
    id="ec-input-field-1"
    type="text"
  />
  <!--v-if-->
  <!--v-if-->
</div>
`;

exports[`EcAmountInput should render with a sensitive class when isSensitive prop is set to true 1`] = `
<div
  class="ec-input-field"
  data-test="ec-input-field"
>
  <!--v-if-->
  <input
    class="ec-input-field__input my-sensitive-content-test-class"
    data-test="ec-amount-input ec-input-field__input"
    id="ec-input-field-1"
    type="text"
  />
  <!--v-if-->
  <!--v-if-->
</div>
`;
